--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Change history
 ==============
 
+0.1.5 (2012-08-17)
+
+- Redid documentation
+  [thepjot]
+
 0.1.4 (2012-08-17)
 
 - Redid documentation
