--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,9 +1,12 @@
 Change history
 ==============
 
-
-0.1.6 (2014-07-18)
+0.1.7 (2014-07-18)
 ------------------
+- Bump version to fix previous release mess
+
+0.1.6 (unreleased by mistake)
+-----------------------------
 
 - Make eggscleaner run under windows
   [anton-tagunov]
